# json

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.asciidoc  README.md  conanfile.py  gitflow.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-test.yml  cmake.yml  codeql-analysis.yml  sonarcloud.yml
doc/: release_notes.md
examples/: CMakeLists.txt
examples/config/: CMakeLists.txt
examples/config/src/: config.hxx  main.cxx
examples/parser/: CMakeLists.txt
examples/parser/src/: main.cxx
include/: json  json.hxx
lib/: README.md
parser/: CMakeLists.txt
parser/src/: main.cxx  version.h
scripts/docker/: Dockerfile
scripts/modules/: GitInformation.cmake  PreBuild.cmake
src/: main.cxx
test/: CMakeLists.txt  jsontest.cxx
test/src/: jsontest.cxx  main.cxx  prettyjsontest.cxx
